# UDP-receiver

./: README.md
my-udp-main/receiver/: build.sh  conanfile.py  meson.build
my-udp-main/receiver/include/: UDPClient.hpp
my-udp-main/receiver/src/: main.cpp
my-udp-main/server_py/: client.py  server.py
